--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -3,20 +3,18 @@
     src: url(Archivo2.ttf);
 }
 
-@import "reset.css";
-
 h1 a {
     color: #422BBB;
     font-family: myFirstFont;
 }
 
 body {
-    padding-left: 0px;
+    padding-left: 15px;
 }
 
 .page-header {
     background-color: #0d406d;
-    margin-top: 10;
+    margin-top: 0;
     padding: 10px 10px 10px 10px
 }
 
@@ -36,7 +34,6 @@ h1, h2, h3, h4 {
 
 .date {
     color: #828282;
-    margin-bottom: -21px;
 }
 
 .save {
@@ -44,21 +41,32 @@ h1, h2, h3, h4 {
 }
 
 .post-form textarea, .post-form input {
-    width: 60%;
+    width: 100%;
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
     float: right;
-    font-size: 26pt;
-    margin-right: 20px;
-    margin-top: -50px;
+    font-size: 24pt;
+    margin-right: 915px;
+    margin-top: -57px;
 }
 
 .post {
-    margin-bottom: 30px;
+    margin-bottom: 70px;
 }
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #0d406d;
+    color: white;
+    text-align: center;
+}
+
