--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,10 +9,7 @@
     </head>
     <body>
 <!-- comment-->
-
-         <a href="https://www.ibm.com" target="_blank">IBM</a>
         <div class="page-header">
-
             <h1><a href="/">Suomi 4 blogi</a></h1>
         {% if user.is_authenticated %}
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
@@ -26,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <footer class="footer">
+        <footer>
             <h6>2023 Created by Nermin Iusufovich as a part of Xamk Suomi 4 course.</h6>
         </footer>
     </body>
